--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -8,7 +8,7 @@
   padding: 1rem;
   position: fixed;
   top: 14vh;
-  transition: all 0.5s;
+  transition: all 0.2s;
   z-index: 2;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
